Adding new author rule

--- a/Homework/assets/css/style.css
+++ b/Homework/assets/css/style.css
@@ -891,4 +891,8 @@ body {
   .download__image:hover {
     opacity: 0.7; }
 
+.author {
+  margin: 25px auto;
+}
+
 /*# sourceMappingURL=style.css.map */
