Including _home-contact into this file

--- a/Homework/assets/css/style.sass
+++ b/Homework/assets/css/style.sass
@@ -17,3 +17,4 @@
 @import '3-sections/_home-cssunits'
 @import '3-sections/_home-bootstrap'
 @import '3-sections/_home-download'
+@import '3-sections/_home-contact'
