Including contact.twig into this file

--- a/Homework/layouts/default.twig
+++ b/Homework/layouts/default.twig
@@ -12,6 +12,7 @@
 		<div class="container">
 			{% include 'include/header.twig' %} <!--Ukljucivanje header fajla-->
 			{% include 'include/accordion.twig' %} <!--Ukljucivanje glavnog menija stranice-->
+			{% include 'include/contact.twig' %} <!--Ukljucivanje contacta stranice-->
 		</div>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
